<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="101dp"
            android:layout_height="219dp"
            android:contentDescription="@string/top_img"
            app:srcCompat="@drawable/shinchanfren" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/banner_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/Title"
                    android:layout_width="229dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/banner_layout">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="10dp">

                        <Button
                            android:id="@+id/button_compare"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="26dp"
                            android:layout_marginBottom="0dp"
                            android:paddingStart="60dp"
                            android:paddingEnd="0dp"
                            android:paddingVertical="20dp"
                            android:gravity="start"
                            android:text="@string/act1"
                            android:textSize="24sp"
                            android:textColor="@color/black"
                            android:backgroundTint="#FFDE59" />

                        <ImageButton
                            android:id="@+id/img_but_compare"
                            android:layout_width="wrap_content"
                            android:layout_height="110dp"
                            android:layout_marginStart="250dp"
                            android:backgroundTint="#00FFFFFF"
                            android:contentDescription="@string/act1_button"
                            app:srcCompat="@drawable/duck"
                            tools:ignore="ImageContrastCheck" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="10dp">

                        <Button
                            android:id="@+id/button_order"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="26dp"
                            android:layout_marginBottom="0dp"
                            android:paddingStart="0dp"
                            android:paddingEnd="60dp"
                            android:paddingVertical="20dp"
                            android:gravity="end"
                            android:text="@string/act2"
                            android:textSize="23sp"
                            android:textColor="@color/black"
                            android:backgroundTint="#FFA3B3" />

                        <ImageButton
                            android:id="@+id/img_but_order"
                            android:layout_width="wrap_content"
                            android:layout_height="110dp"
                            android:layout_marginStart="10dp"
                            android:backgroundTint="#00FFFFFF"
                            android:contentDescription="@string/act2_button"
                            app:srcCompat="@drawable/dinosaur"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="10dp">

                        <Button
                            android:id="@+id/button_compose"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="26dp"
                            android:layout_marginBottom="0dp"
                            android:paddingStart="60dp"
                            android:paddingEnd="0dp"
                            android:paddingVertical="20dp"
                            android:gravity="start"
                            android:text="@string/act3"
                            android:textSize="24sp"
                            android:textColor="@color/black"
                            android:backgroundTint="#76B9F0" />

                        <ImageButton
                            android:id="@+id/img_but_compose"
                            android:layout_width="wrap_content"
                            android:layout_height="110dp"
                            android:layout_marginStart="250dp"
                            android:backgroundTint="#00FFFFFF"
                            android:contentDescription="@string/act3_button"
                            app:srcCompat="@drawable/rabbit"
                            tools:ignore="ImageContrastCheck" />

                    </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageView
            android:id="@+id/bottomimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bottom_img"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/shinchanall" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
