<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".compare">

    <LinearLayout
        android:id="@+id/banner_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="#FFF6AC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/banner_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/handelson_two"
                android:text="@string/act1"
                android:textSize="35sp"
                android:textColor="@color/black" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/top_img"
            app:srcCompat="@drawable/minionbob" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/banner_layout">

        <LinearLayout
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/banner_layout">

            <ImageButton
                android:id="@+id/arrow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/arrow"/>

            <TextView
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingVertical="5dp"
                android:textSize="28sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/top_line">

            <Button
                android:id="@+id/number1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:backgroundTint="#F9E830"
                android:contentDescription="@string/num1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:backgroundTint="#F9E830"
                android:contentDescription="@string/num2"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/content">

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:text="@string/next"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:backgroundTint="#FFFF8B"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/next"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/bottom_img"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/minion"
            app:layout_constraintEnd_toEndOf="@id/next"
            app:layout_constraintStart_toStartOf="@id/next"
            app:layout_constraintTop_toBottomOf="@id/next" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>